--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     </head>
     <body>
         main index, with jquery.min equipted
