--- a/app/templates/jsl/index.html
+++ b/app/templates/jsl/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
+    <meta content="{{ csrf_token() }}" name="csrf-token">
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/jquery.cxcalendar.css') }}">
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.cxcalendar.min.js') }}"></script>
 </head>
 <body>
     <div id="div_lvl_1">
@@ -20,6 +23,16 @@
         </div>
     </div>
     <script type="text/javascript">
+        var csrf_token = $('meta[name=csrf-token]').attr('content');
+        $.ajaxSetup(
+            {
+                beforeSend: function(xhr, settings) {
+                    if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", csrf_token);
+                    }
+                }
+            }
+        );
         /*
         $('#div_lvl_1').on('click',
             function(e){
