--- a/app/templates/jsl/index.html
+++ b/app/templates/jsl/index.html
@@ -6,11 +6,11 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.cxcalendar.min.js') }}"></script>
 </head>
 <body>
-    <div id="div_lvl_1">
+    <div id="div_lvl_1" class="aaa bbb ccc">
         <div id="div_lvl_2">
             div 2 1
         </div>
-        <div id="div_lvl_2_2" onclick="alert(this)">
+        <div id="div_lvl_2_2" onclick="alert(this)" data-vvv="42">
             div 2 2
         </div>
         <div id="div_lvl_2_3">
